fix eventemitter2.min.js url

--- a/examples/tf.html
+++ b/examples/tf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+<script src=" https://cdn.jsdelivr.net/npm/eventemitter2@6.4.9/lib/eventemitter2.min.js "></script>
 <script src="../build/roslib.js"></script>
 
 <script>
@@ -12,7 +12,7 @@
     // set this to false to use the new service interface to
     // tf2_web_republisher. true is the default and means roslibjs
     // will use the action interface
-    groovyCompatibility : true
+    groovyCompatibility : false
   });
 
   // If there is an error on the backend, an 'error' emit will be emitted.
