--- a/examples/camera.html
+++ b/examples/camera.html
@@ -65,7 +65,7 @@
    var image = new ROSLIB.Topic({
      ros : ros,
      name : '/camera/color/image_raw',
-     messageType : 'sensor_msgs/Image'
+     messageType : 'sensor_msgs/msg/Image'
    });
 
    image.subscribe(function(imgMes) {
@@ -78,7 +78,7 @@
      const data = imgData.data;
      const inData = atob(imgMes.data);
 
-     var j = 0; i = 4; // j data in , i data out
+     var j = 0; i = 0; // j data in , i data out
      while( j < inData.length) {
        const w1 = inData.charCodeAt(j++);  // read 3 16 bit words represent 1 pixel
        const w2 = inData.charCodeAt(j++);
