--- a/examples/urdf.html
+++ b/examples/urdf.html
@@ -2,58 +2,93 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<script src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
+
 <script src="../build/roslib.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/eventemitter2@6.4.9/lib/eventemitter2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.89.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/ros3d@1/build/ros3d.js"></script>
+<script src="js/ColladaLoader.js"></script>
 
 <script>
-  /**
-   * Setup all visualization elements when the page is loaded.
-   */
-  function init() {
-    // Connect to ROS.
-    var ros = new ROSLIB.Ros({
-      url : 'ws://localhost:9090'
-    });
+ /**
+  * Setup all visualization elements when the page is loaded.
+  */
+ function init() {
+   // Connect to ROS.
+   var ros = new ROSLIB.Ros({
+     url : 'ws://localhost:9090'
+   });
 
-    // Get the URDF value from ROS.
-    var param = new ROSLIB.Param({
-      ros : ros,
-      name : 'robot_description'
-    });
+   // Get the URDF value from ROS.
+   var param = new ROSLIB.Param({
+     ros : ros,
+     name : '/rviz2_moveit:robot_description'
+   });
 
-    param.get(function(param) {
-      // Setup the loader for the URDF.
-      var urdfModel = new ROSLIB.UrdfModel({
-        string : param
-      });
+   param.get(function(param) {
+     // Setup the loader for the URDF.
+     var urdfModel = new ROSLIB.UrdfModel({
+       string : param
+     });
 
-      console.log(urdfModel);
-    });
-    // If there is an error on the backend, an 'error' emit will be emitted.
-    ros.on('error', function(error) {
-      document.getElementById('connecting').style.display = 'none';
-      document.getElementById('connected').style.display = 'none';
-      document.getElementById('closed').style.display = 'none';
-      document.getElementById('error').style.display = 'inline';
-      console.log(error);
-    });
+     console.log(urdfModel);
+   });
 
-    // Find out exactly when we made a connection.
-    ros.on('connection', function() {
-      console.log('Connection made!');
-      document.getElementById('connecting').style.display = 'none';
-      document.getElementById('error').style.display = 'none';
-      document.getElementById('closed').style.display = 'none';
-      document.getElementById('connected').style.display = 'inline';
-    });
 
-    ros.on('close', function() {
-      console.log('Connection closed.');
-      document.getElementById('connecting').style.display = 'none';
-      document.getElementById('connected').style.display = 'none';
-      document.getElementById('closed').style.display = 'inline';
-    });
-  }
+   // If there is an error on the backend, an 'error' emit will be emitted.
+   ros.on('error', function(error) {
+     document.getElementById('connecting').style.display = 'none';
+     document.getElementById('connected').style.display = 'none';
+     document.getElementById('closed').style.display = 'none';
+     document.getElementById('error').style.display = 'inline';
+     console.log(error);
+   });
+
+   // Find out exactly when we made a connection.
+   ros.on('connection', function() {
+     console.log('Connection made!');
+     document.getElementById('connecting').style.display = 'none';
+     document.getElementById('error').style.display = 'none';
+     document.getElementById('closed').style.display = 'none';
+     document.getElementById('connected').style.display = 'inline';
+   });
+
+   ros.on('close', function() {
+     console.log('Connection closed.');
+     document.getElementById('connecting').style.display = 'none';
+     document.getElementById('connected').style.display = 'none';
+     document.getElementById('closed').style.display = 'inline';
+   });
+
+   // Create the main viewer.
+   var viewer = new ROS3D.Viewer({
+     divID : 'urdf',
+     width : 800,
+     height : 600,
+     antialias : true
+   });
+
+   viewer.addObject(new ROS3D.Grid());
+
+   var tfClient = new ROSLIB.TFClient({
+     ros : ros,
+     fixedFrame : 'world',
+     angularThres : 0.01,
+     transThres : 0.01,
+     rate : 10.0
+   });
+
+
+   var urdfClient = new ROS3D.UrdfClient({
+     ros : ros,
+     tfClient : tfClient,
+     rootObject : viewer.scene,
+     param : '/rviz2_moveit:robot_description',
+     path : 'http://localhost:8000/'
+   });
+
+
+ }
 </script>
 </head>
 
@@ -80,5 +115,6 @@
       Connection closed.
     </p>
   </div>
+  <div id="urdf"></div>
 </body>
 </html>
