use tf2client in tf.html

--- a/examples/tf.html
+++ b/examples/tf.html
@@ -45,7 +45,7 @@
 
   // TF Client
   // ---------
-  var tfClient = new ROSLIB.TFClient({
+  var tfClient = new ROSLIB.TF2Client({
     ros : ros,
     fixedFrame : 'world',
     angularThres : 0.01,
